<resources>
    <string name="app_name">Exercise2</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="level">Level: </string>
    <string name="level_score">0</string>
    <string name="record">Record:</string>
    <string name="record_score">0</string>
    <string name="new_game">New game</string>
    <string name="free_play">Free play</string>
</resources>